--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="hi">
   <h4 style="color:rgb(203, 65, 249) ">
- Happy Birthday! <center>MIM APU</center>
+ Happy Birthday! <center>MIM</center>
   </h4>
 
 
